@@ -1,5 +1,5 @@
 @c "hacprsim/usage.texi"
-@c $Id: usage.texi,v 1.3 2008/03/17 23:02:04 fang Exp $
+@c $Id: usage.texi,v 1.4 2008/12/01 20:27:32 fang Exp $
 
 @node Usage
 @chapter Usage
@@ -11,6 +11,7 @@
 @include opt/option-a.texi
 @include opt/option-b.texi
 @include opt/option-d.texi
+@include opt/option-D-upper.texi
 @include opt/option-f.texi
 @include opt/option-h.texi
 @include opt/option-i.texi
