@@ -1,5 +1,5 @@
 # "test/prsim/vpi/Makefile.am"
-#	$Id: Makefile.am,v 1.5 2008/11/05 23:04:41 fang Exp $
+#	$Id: Makefile.am,v 1.6 2008/12/01 20:27:40 fang Exp $
 # Test auto-Makefile for prsim with VPI.  
 
 include $(top_srcdir)/test/Make.test-head
@@ -14,7 +14,8 @@ HACKT_PRSIMRC_TEST_SUBJECTS = inverters \
 	and_tree
 
 # for .v verilog tests
-HACKT_VPI_TEST_SCRIPTS_PASSES = inverters shoelace \
+HACKT_VPI_TEST_SCRIPTS_PASSES = \
+	inverters inverters-delay shoelace \
 	interleave-a interleave-b interleave-c \
 	independent-01 \
 	channel-source-sink \
@@ -72,7 +73,7 @@ inverters.vxi-subdir-out: Makefile.copy force
 CLEANFILES += Makefile.copy pli.tab
 
 EXAMPLE_DATA_FILES = example.mk clkgen.v \
-	inverters.hac inverters.v shoelace.v \
+	inverters.hac inverters.v inverters-delay.v shoelace.v \
 	channel-source-sink.hac channel-source-sink.v \
 	and_tree.hac and_tree.v standard.v
 EXTRA_DIST += $(EXAMPLE_DATA_FILES)
